# cpp_project

./: .gitignore  CMakeLists.txt  testmain.cpp
.VSCodeCounter/2023-06-08_23-30-26/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cache/clangd/index/: fileManage.h.3787BD623E7B7A06.idx  main.cpp.5EE8FC731DC1CF56.idx  manager.h.0B22E2E0682AAE2E.idx  menu.h.9F20BBF04173894C.idx  person.h.E4106012999CED2D.idx  personList.h.F8F09A50D6A9095C.idx  salesManager.h.A18E89809CB6CC9B.idx  salesPerson.h.29FD99D9EC36A666.idx  technician.h.591F96AB1B7D19FC.idx  testmain.cpp.311317189F97FD34.idx
data/: database.txt
src/: fileManage.h  logger.h  manager.h  menu.h  person.h  personList.h  salesManager.h  salesPerson.h  technician.h
